--- a/infrastructure-playbooks/purge-docker-cluster.yml
+++ b/infrastructure-playbooks/purge-docker-cluster.yml
@@ -305,6 +305,7 @@
   hosts:
     - "{{ osd_group_name|default('osds') }}"
 
+  gather_facts: true
   become: true
 
   tasks:
@@ -586,6 +587,7 @@
     - "{{ nfs_group_name|default('nfss') }}"
     - "{{ mgr_group_name|default('mgrs') }}"
 
+  gather_facts: true
   become: true
 
   tasks:
