--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -652,6 +652,7 @@ openstack_keys:
 # DASHBOARD #
 #############
 dashboard:
+  enabled: True
   # Choose http or https
   # For https, you should set dashboard.crt/key and grafana.crt/key
   protocol: http
