introduce new role ceph-facts
sometimes we play the whole role `ceph-defaults` just to access the
default value of some variables. It means we play the `facts.yml` part
in this role while it's not desired. Splitting this role will speedup
the playbook.

Closes: #3282

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit 0eb56e36f8ce52015aa6c343faccd589e5fd2c6c)

--- a/infrastructure-playbooks/add-osd.yml
+++ b/infrastructure-playbooks/add-osd.yml
@@ -44,6 +44,7 @@
   roles:
     - ceph-defaults
     - ceph-validate
+    - ceph-facts
 
 - hosts: osds
   gather_facts: False
@@ -67,6 +68,7 @@
     - role: ceph-infra
     - role: ceph-docker-common
       when: containerized_deployment | bool
+    - role: ceph-facts
     - role: ceph-common
       when: not containerized_deployment | bool
     - role: ceph-config
