--- a/infrastructure-playbooks/shrink-mon.yml
+++ b/infrastructure-playbooks/shrink-mon.yml
@@ -72,6 +72,7 @@
 
   roles:
     - ceph-defaults
+    - ceph-facts
 
   post_tasks:
     - name: pick a monitor different than the one we want to remove
