--- a/infrastructure-playbooks/switch-from-non-containerized-to-containerized-ceph-daemons.yml
+++ b/infrastructure-playbooks/switch-from-non-containerized-to-containerized-ceph-daemons.yml
@@ -118,6 +118,7 @@
 
   roles:
     - ceph-defaults
+    - ceph-facts
     - ceph-handler
     - ceph-docker-common
     - ceph-mon
@@ -176,6 +177,7 @@
 
   roles:
     - ceph-defaults
+    - ceph-facts
     - ceph-handler
     - ceph-docker-common
     - ceph-mgr
@@ -283,6 +285,7 @@
 
   roles:
     - ceph-defaults
+    - ceph-facts
     - ceph-handler
     - ceph-docker-common
     - ceph-osd
@@ -345,6 +348,7 @@
 
   roles:
     - ceph-defaults
+    - ceph-facts
     - ceph-handler
     - ceph-docker-common
     - ceph-mds
@@ -388,6 +392,7 @@
 
   roles:
     - ceph-defaults
+    - ceph-facts
     - ceph-handler
     - ceph-docker-common
     - ceph-rgw
@@ -431,6 +436,7 @@
 
   roles:
     - ceph-defaults
+    - ceph-facts
     - ceph-handler
     - ceph-docker-common
     - ceph-rbd-mirror
@@ -478,6 +484,7 @@
 
   roles:
     - ceph-defaults
+    - ceph-facts
     - ceph-handler
     - ceph-docker-common
     - ceph-nfs
