--- a/infrastructure-playbooks/purge-docker-cluster.yml
+++ b/infrastructure-playbooks/purge-docker-cluster.yml
@@ -309,17 +309,17 @@
   become: true
 
   tasks:
+    - import_role:
+        name: ceph-defaults
+        private: false
 
-  - import_role:
-      name: ceph-defaults
-      private: false
+    - name: gather monitors facts
+      setup:
+      delegate_to: "{{ item }}"
+      delegate_facts: True
+      with_items: "{{ groups.get(mon_group_name | default('mons')) }}"
 
-  - name: gather monitors facts
-    setup:
-    delegate_to: "{{ item }}"
-    delegate_facts: True
-    with_items: "{{ groups.get(mon_group_name | default('mons')) }}"
-
+  post_tasks:
   - import_role:
       name: ceph-facts
       private: false
