purge-container: fix wrong syntax
we want a default value for `mon_group_name`, not for
`groups[mon_group_name]`.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit d0b3cb7f851ece584da47af65c4416ad93541065)

--- a/infrastructure-playbooks/purge-docker-cluster.yml
+++ b/infrastructure-playbooks/purge-docker-cluster.yml
@@ -308,18 +308,17 @@
   gather_facts: true
   become: true
 
-  pre_tasks:
-  - name: gather monitors facts
-    setup:
-    delegate_to: "{{ item }}"
-    delegate_facts: True
-    with_items: "{{ groups[mon_group_name] | default('mons') }}"
-
   tasks:
 
   - import_role:
       name: ceph-defaults
       private: false
+
+  - name: gather monitors facts
+    setup:
+    delegate_to: "{{ item }}"
+    delegate_facts: True
+    with_items: "{{ groups.get(mon_group_name, 'mons') }}"
 
   - name: get all the running osds
     shell: |
