purge-container: move facts gathering after ceph-defaults role import
This task has to be called after the role `ceph-defaults` has been
played, otherwise, `mon_group_name` will never be known.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit a12de3e048e1b62b8cbf6bc6d089db1bb880d37c)

--- a/infrastructure-playbooks/purge-docker-cluster.yml
+++ b/infrastructure-playbooks/purge-docker-cluster.yml
@@ -318,7 +318,11 @@
     setup:
     delegate_to: "{{ item }}"
     delegate_facts: True
-    with_items: "{{ groups.get(mon_group_name, 'mons') }}"
+    with_items: "{{ groups.get(mon_group_name | default('mons')) }}"
+
+  - import_role:
+      name: ceph-facts
+      private: false
 
   - name: get all the running osds
     shell: |
@@ -592,6 +596,10 @@
 
   - import_role:
       name: ceph-defaults
+      private: false
+
+  - import_role:
+      name: ceph-facts
       private: false
 
   - name: show container list on all the nodes (should be empty)
