--- a/group_vars/osds.yml.sample
+++ b/group_vars/osds.yml.sample
@@ -124,8 +124,7 @@ dummy:
 # 'data' is only 100MB big and do not store any of your data, it's just a bunch of Ceph metadata.
 # 'block' will store all your actual data.
 # - The devices in 'dedicated_devices' will get 1 partition for RocksDB DB, called 'block.db'
-#  and one for RocksDB WAL, called 'block.wal'. To use a single partition for RocksDB and WAL together
-#  set bluestore_wal_devices to [] (supported only for non-containerized deployment).
+#  and one for RocksDB WAL, called 'block.wal'
 #
 # By default dedicated_devices will represent block.db
 #
@@ -148,8 +147,6 @@ dummy:
 #
 # By default, if 'bluestore_wal_devices' is empty, it will get the content of 'dedicated_devices'.
 # If set, then you will have a dedicated partition on a specific device for block.wal.
-#
-# Set bluestore_wal_devices: [] to use the same partition for RocksDB and WAL (supported only for non-containerized deployment).
 #
 # Example of what you will get:
 # [root@ceph-osd0 ~]# blkid /dev/sd*
