--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -73,7 +73,7 @@ debian_package_dependencies:
 
 centos_package_dependencies:
   - python-pycurl
-  - epel-release
+  #- epel-release
   - python-setuptools
   - libselinux-python
 
@@ -492,11 +492,6 @@ rgw_pull_proto: "http"
 # Ceph configuration file override.
 # This allows you to specify more configuration options
 # using an INI style format.
-#
-# When configuring RGWs, make sure you use the form [client.rgw.*]
-# instead of [client.radosgw.*].
-# For more examples check the profiles directory of https://github.com/ceph/ceph-ansible.
-#
 # The following sections are supported: [global], [mon], [osd], [mds], [rgw]
 #
 # Example:
@@ -504,8 +499,6 @@ rgw_pull_proto: "http"
 #   global:
 #     foo: 1234
 #     bar: 5678
-#   "client.rgw.{{ hostvars[groups.get(rgw_group_name)[0]]['ansible_hostname'] }}":
-#     rgw_zone: zone1
 #
 ceph_conf_overrides: {}
 
