--- a/roles/ceph-osd/tasks/scenarios/non-collocated.yml
+++ b/roles/ceph-osd/tasks/scenarios/non-collocated.yml
@@ -70,27 +70,17 @@
     - not containerized_deployment
     - item.0.partitions|length == 0
 
-- name: manually prepare ceph "{{ osd_objectstore }}" non-containerized osd disk(s) with a dedicated device for db
-  command: "ceph-disk prepare {{ ceph_disk_cli_options }} --block.db {{ item.1 }} {{ item.2 }}"
-  with_together:
-    - "{{ parted_results.results | default([]) }}"
-    - "{{ dedicated_devices }}"
-    - "{{ devices | unique }}"
-  when:
-    - osd_objectstore == 'bluestore'
-    - not containerized_deployment
-    - item.0.partitions|length == 0
-    - bluestore_wal_devices|length == 0
-
 - name: manually prepare ceph "{{ osd_objectstore }}" non-containerized osd disk(s) with a dedicated device for db and wal
+#  command: "ceph-disk prepare {{ ceph_disk_cli_options }} --block.db {{ item.1 }} --block.fast {{ item.2 }} --block.wal {{ item.3 }} {{ item.4 }}"
   command: "ceph-disk prepare {{ ceph_disk_cli_options }} --block.db {{ item.1 }} --block.wal {{ item.2 }} {{ item.3 }}"
   with_together:
     - "{{ parted_results.results | default([]) }}"
     - "{{ dedicated_devices }}"
+#    - "{{ dedicated_devices }}"
     - "{{ bluestore_wal_devices }}"
     - "{{ devices | unique }}"
   when:
     - osd_objectstore == 'bluestore'
     - not containerized_deployment
     - item.0.partitions|length == 0
-    - bluestore_wal_devices|length > 0
+
